--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ bin/
 xcuserdata/
 *.xcworkspace/*
 !*.xcworkspace/contents.xcworkspacedata
+.kotlin/
 
 ### Gradle Wrapper ###
 !gradle-wrapper.jar
