--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -168,6 +168,17 @@ jobs:
         git push origin "${TAG_NAME}"
         echo "Created and pushed tag: ${TAG_NAME}"
 
+    - name: Publish to Maven Central
+      env:
+        ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+        ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+        ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
+        ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.SIGNING_KEY_ID }}
+        ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_KEY_PASSWORD }}
+      run: |
+        echo "Publishing to Maven Central..."
+        ./gradlew :kmpdf:publishAllPublicationsToMavenCentralRepository --no-configuration-cache
+
     - name: Create GitHub Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
