--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -168,13 +168,26 @@ jobs:
         git push origin "${TAG_NAME}"
         echo "Created and pushed tag: ${TAG_NAME}"
 
-    - name: Publish to Maven Central
+    - name: Install GPG
       env:
-        ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
-        ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-        ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
-        ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.SIGNING_KEY_ID }}
-        ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_KEY_PASSWORD }}
+        SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+      run: |
+        echo "$SIGNING_KEY" | gpg --dearmor > ${HOME}/secring.gpg
+
+    - name: Add Gradle Properties
+      env:
+        MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+        MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+        SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
+        SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
+      run: |
+        echo "mavenCentralUsername=${MAVEN_CENTRAL_USERNAME}" >> gradle.properties
+        echo "mavenCentralPassword=${MAVEN_CENTRAL_PASSWORD}" >> gradle.properties
+        echo "signing.keyId=${SIGNING_KEY_ID}" >> gradle.properties
+        echo "signing.password=${SIGNING_KEY_PASSWORD}" >> gradle.properties
+        echo "signing.secretKeyRingFile=${HOME}/secring.gpg" >> gradle.properties
+
+    - name: Publish to Maven Central
       run: |
         echo "Publishing to Maven Central..."
         ./gradlew :kmpdf:publishAllPublicationsToMavenCentralRepository --no-configuration-cache
