--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -176,7 +176,10 @@ jobs:
       env:
         SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
       run: |
+        brew install gpg
         echo "$SIGNING_KEY" | gpg --dearmor > ${HOME}/secring.gpg
+        echo "GPG keyring created at: ${HOME}/secring.gpg"
+        gpg --list-keys || echo "No keys in default keyring"
 
     - name: Add Gradle Properties
       env:
